--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity android:name=".MainActivity"
+            android:screenOrientation="userPortrait"
             android:persistent="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
