--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
             </intent-filter>
         </activity>
         <activity
+            android:screenOrientation="userPortrait"
             android:name=".ViewDetails"
             android:label="@string/title_activity_view_details"
             android:parentActivityName=".MainActivity"
